kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: isik-hapi
  labels:
    app: isik-hapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: isik-hapi
  template:
    metadata:
      labels:
        app: isik-hapi
    spec:
      containers:
      - name: isik-hapi
        image: 765415433338.dkr.ecr.eu-central-1.amazonaws.com/isik-hapi:$IMAGE_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name: isik-hapi
spec:
  selector:
    app: isik-hapi
  ports:
    - port: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isik-hapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/cors-allow-headers: Content-Type, Authorization, Cache-Control
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, OPTIONS, DELETE, PUT
    nginx.ingress.kubernetes.io/cors-allow-origin: https://care.med-united.health
    nginx.ingress.kubernetes.io/cors-expose-headers: X-Custom-Header
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.org/client-max-body-size: "512m"
spec:
  tls:
    - hosts:
      - isik-hapi.med-united.health
      secretName: isik-hapi-tls
  rules:
  - host: isik-hapi.med-united.health
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: isik-hapi
              port:
                number: 8080
